syntax = "proto3";

package product;

service ProductService {
  rpc GetProduct (ProductRequest) returns (ProductResponse);
  rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct (ProductRequest) returns (Empty);
}

message ProductRequest {
  string id = 1;
}

message CreateProductRequest {
  string title = 1;
  string description = 2;
  int32 price = 3;
}

message UpdateProductRequest {
  string id = 1;
 optional  string title = 2;
 optional string description = 3;
 optional int32 price = 4;

}

message ProductResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  int32 price = 4;
}

message Empty {}
